; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/extr_main.c_brcms_b_mctrl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/extr_main.c_brcms_b_mctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcms_hardware = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @brcms_b_mctrl(%struct.brcms_hardware* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.brcms_hardware*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.brcms_hardware* %0, %struct.brcms_hardware** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* %5, align 4
  %11 = xor i32 %10, -1
  %12 = and i32 %9, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  br label %35

15:                                               ; preds = %3
  %16 = load %struct.brcms_hardware*, %struct.brcms_hardware** %4, align 8
  %17 = getelementptr inbounds %struct.brcms_hardware, %struct.brcms_hardware* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* %5, align 4
  %21 = xor i32 %20, -1
  %22 = and i32 %19, %21
  %23 = load i32, i32* %6, align 4
  %24 = or i32 %22, %23
  store i32 %24, i32* %8, align 4
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* %7, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %15
  br label %35

29:                                               ; preds = %15
  %30 = load i32, i32* %8, align 4
  %31 = load %struct.brcms_hardware*, %struct.brcms_hardware** %4, align 8
  %32 = getelementptr inbounds %struct.brcms_hardware, %struct.brcms_hardware* %31, i32 0, i32 0
  store i32 %30, i32* %32, align 4
  %33 = load %struct.brcms_hardware*, %struct.brcms_hardware** %4, align 8
  %34 = call i32 @brcms_c_mctrl_write(%struct.brcms_hardware* %33)
  br label %35

35:                                               ; preds = %29, %28, %14
  ret void
}

declare dso_local i32 @brcms_c_mctrl_write(%struct.brcms_hardware*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
